maybe adding a min-height will squash the bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -408,6 +408,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
   .profStat{
     line-height: 2em;
+    min-height:70px;
   }
 
 
